--- a/sass/grid.scss
+++ b/sass/grid.scss
@@ -4,7 +4,8 @@ body{
     grid-template-columns: repeat(3, 1fr);
     grid-template-areas:"header header header"
                         "body body aside"
-                        "footer footer footer";
+                        "footer-1 footer-2 footer-3"
+                        "footer-derechos footer-derechos footer-derechos";
 
     .header{
       grid-area: header;
@@ -15,8 +16,17 @@ body{
     .aside{
       grid-area: aside;
     }
-    .footer{
-      grid-area: footer;
+    .footer-1{
+      grid-area: footer-1;
+    }
+    .footer-2{
+      grid-area: footer-2;
+    }
+    .footer-3{
+      grid-area: footer-3;
+    }
+    .footer-derechos{
+      grid-area: footer-derechos;
     }
   }
 }
