se modifico el aside

--- a/sass/article.scss
+++ b/sass/article.scss
@@ -16,10 +16,10 @@ body{
             margin-top: $margin;
             margin-bottom: $margin;
             .article-date{
-
+              color:$color-3;
             }
             .article-auth{
-
+              color:$color-3;
             }
           }
         }
