--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -5,5 +5,11 @@ body{
       color:$color-3;
       padding: $padding;
     }
+    .footer-derechos{
+      background-color: $color-1;
+      padding: $padding;
+      text-align: center;
+      color:$color-3;
+    }
   }
 }
