--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,14 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 body .container {
-  -ms-grid-row: 4;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[3];
   grid-template-columns: repeat(3, 1fr);
-  grid-template-areas: "header header header" "body body aside" "footer-1 footer-2 footer-3" "footer-derechos footer-derechos footer-derechos";
-  grid-area: footer-derechos; }
+  grid-template-areas: "header header header" "body body aside" "footer-1 footer-2 footer-3" "footer-derechos footer-derechos footer-derechos"; }
   body .container .header {
     -ms-grid-row: 1;
     -ms-grid-column: 1;
@@ -35,6 +31,11 @@ body .container {
     -ms-grid-row: 3;
     -ms-grid-column: 3;
     grid-area: footer-3; }
+  body .container .footer-derechos {
+    -ms-grid-row: 4;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-area: footer-derechos; }
 
 * {
   margin: 0;
@@ -44,7 +45,7 @@ body .container {
 body .container {
   position: relative; }
   body .container .header {
-    height: 100px;
+    height: 70px;
     background-color: #40514e;
     -webkit-box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.3);
@@ -54,7 +55,7 @@ body .container {
     transition: 1s;
     width: 100%; }
     body .container .header .header-body {
-      line-height: 3;
+      line-height: 2;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -92,10 +93,10 @@ body .container {
             font-size: 1.3em; }
 
 body .container .body {
-  margin-top: 100px; }
+  margin-top: 70px; }
 
 body .container .aside {
-  margin-top: 100px; }
+  margin-top: 70px; }
 
 body .container .body .body-article {
   color: black;
@@ -123,6 +124,10 @@ body .container .body .body-article {
     justify-content: space-between;
     margin-top: 20px;
     margin-bottom: 20px; }
+    body .container .body .body-article .article-title .article-title-dates .article-date {
+      color: #30e3ca; }
+    body .container .body .body-article .article-title .article-title-dates .article-auth {
+      color: #30e3ca; }
   body .container .body .body-article .article-description {
     text-align: justify; }
   body .container .body .body-article .article-body {
@@ -230,11 +235,23 @@ body .container .aside {
   -ms-flex-direction: row;
   flex-direction: row; }
   body .container .aside .aside-content {
+    width: 100%;
     margin-right: 20px;
     margin-top: 20px;
     margin-bottom: 20px; }
+    body .container .aside .aside-content .aside-content-item {
+      width: 100%;
+      height: 200px;
+      text-align: center;
+      border-radius: 4px; }
 
 body .container .footer {
   background-color: #40514e;
   color: #30e3ca;
   padding: 20px; }
+
+body .container .footer-derechos {
+  background-color: #40514e;
+  padding: 20px;
+  text-align: center;
+  color: #30e3ca; }
