--- a/sass/aside.scss
+++ b/sass/aside.scss
@@ -3,9 +3,16 @@ body{
     .aside{
       @include flex;
       .aside-content{
+        width: 100%;
         margin-right: $margin;
         margin-top: $margin;
         margin-bottom: $margin;
+        .aside-content-item{
+          width: 100%;
+          height: 200px;
+          text-align: center;
+          border-radius: $border;
+        }
       }
     }
   }
