--- a/sass/aside.scss
+++ b/sass/aside.scss
@@ -1,19 +1,6 @@
-body{
-  .container{
-    .aside{
-      @include flex;
-      .aside-content{
-        width: 100%;
-        margin-right: $margin;
-        margin-top: $margin;
-        margin-bottom: $margin;
-        .aside-content-item{
-          width: 100%;
-          height: 200px;
-          text-align: center;
-          border-radius: $border;
-        }
-      }
-    }
-  }
+.aside{
+    @include shadow;
+    // TODO: quitar el color y el tamaño del aside
+    height: 500px;
+    border-radius: $radius;
 }
