--- a/sass/general.scss
+++ b/sass/general.scss
@@ -1,16 +1,22 @@
 *{
-  margin: 0;
-  padding: 0;
-  font-family: $font;
+    padding: 0;
+    margin:0;
+    font-family: $font;
 }
-h1{
-
-}
-h2{
-
-}
-h3{
-
-}
-h4{
+body{
+    background-color: $color-white;
+    color:$color-f;
+    .container{
+    }
+    .hr{
+        width: 100%;
+        height: 2px;
+        background-color: rgba($color-1, .3);
+        margin-top: $margin/2;
+        margin-bottom: $margin/2;
+    }
+    a{
+        color:$color-1;
+        text-decoration: none;
+    }
 }
